crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_alpha_slider.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).alpha_slider_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-channel",
            ),
            String(
                "alpha",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "alpha-slider",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Id,
            String(
                "cp-alpha-slider",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
