crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_area.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).area_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "area",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Id,
            String(
                "cp-area",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-color-picker-area-bg",
            ),
            "hsl(200, 100%, 50%)",
        ),
    ],
}
