crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_area_thumb_dragging.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).area_thumb_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-dragging",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "area-thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Aria(
                KeyShortcuts,
            ),
            String(
                "ArrowUp ArrowDown ArrowLeft ArrowRight",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Color area selector",
            ),
        ),
        (
            Aria(
                RoleDescription,
            ),
            String(
                "color area",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "Saturation: 50%, Lightness: 50%",
            ),
        ),
        (
            Id,
            String(
                "cp-area-thumb",
            ),
        ),
        (
            Role,
            String(
                "application",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-color-picker-area-thumb-x",
            ),
            "50.0%",
        ),
        (
            Custom(
                "ars-color-picker-area-thumb-y",
            ),
            "50.0%",
        ),
        (
            BackgroundColor,
            "hsl(120, 50.0%, 50.0%)",
        ),
    ],
}
