crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_channel_input_rgb.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_|\n{}).channel_input_attrs(ColorChannel::Red, 0))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-channel",
            ),
            String(
                "red",
            ),
        ),
        (
            Data(
                "ars-channel-index",
            ),
            String(
                "0",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "channel-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Id,
            String(
                "cp-channel-0",
            ),
        ),
        (
            InputMode,
            String(
                "numeric",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
    ],
    styles: [],
}
