crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_channel_slider_thumb_alpha_dragging.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_|\n{}).channel_slider_thumb_attrs(ColorChannel::Alpha))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-channel",
            ),
            String(
                "alpha",
            ),
        ),
        (
            Data(
                "ars-dragging",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "channel-slider-thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Alpha",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "50",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-color-picker-channel-thumb-position",
            ),
            "50.0%",
        ),
    ],
}
