crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_content.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "cp-label",
            ),
        ),
        (
            Id,
            String(
                "cp-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [],
}
