crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_eye_dropper_supported.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).eye_dropper_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "eye-dropper-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Pick color from screen",
            ),
        ),
    ],
    styles: [],
}
